调整部分代码，调整打包包括模块，调整命令行参数。